# robocode_curses

./: CMakeLists.txt  config.json  meson.build  meson_options.txt
docs/doxygen/: main.md  robocode
docs/pdf/: main.tex
docs/pdf/code_listings/: example.proto  player.cpp  sequence_diagramm.uml
include/: bullet.h  client.h  connection.h  curses_drawable_objects.h  curses_utils.h  game.h  game_objects.h  player.h  robot.h  server.h
include/streaming/: streaming.h  streaming_client.h  streaming_server.h
src/: connection.cpp  curses_drawable_objects.cpp  main.cpp
src/communication/: client.cpp  server.cpp
src/communication/streaming/: streaming_client.cpp  streaming_server.cpp
src/game_objects/: bullet.cpp  bullet.h  game.cpp  game.h  robot.cpp
src/player_bots/: example_bot.cpp
src/proto/: message.proto  messages.proto
